--- a/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
@@ -22,10 +22,10 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 18 Dec 2024 09:28:21 GMT
+        date: Wed, 18 Dec 2024 13:42:30 GMT
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"mKoNRoyYiFB3LraD9SCBfA"}'
+        data: '{"token":"IyV-W-lxr-YovycgMxWBvg"}'
         compression: none
