--- a/.github/workflows/verify_published.yml
+++ b/.github/workflows/verify_published.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12", "3.11", "3.10", "3.9"]
+        python-version: ["3.13", "3.12", "3.11", "3.10", "3.9"]
         extras: ["", "[all]"]
     steps:
       - name: Set up Python ${{ matrix.python-version }}
