--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12", 
 ]
 
-requires-python = ">=3.9,<3.13"
+requires-python = ">=3.9,<=3.13"
 
 dependencies = [
     "aiohttp ~=3.10.5",
@@ -48,7 +48,7 @@ dependencies = [
     "python-dateutil ~=2.8.0",
     "python-dotenv ~=1.0.1",
     "rich ~=13.8.0",
-    "scipy ~=1.13",
+    "scipy >=1.13",
     "tensorstore~=0.1.69",
     "typer ~=0.12.5",
     "typing-extensions ~=4.0",
@@ -68,7 +68,7 @@ Changelog = "https://github.com/scalableminds/webknossos-libs/blob/master/webkno
 tifffile = ["tifffile >=2024.8.24"]
 imagecodecs = ["imagecodecs >=2021.11.20"]
 bioformats = ["JPype1 ~=1.5.0"]
-czi = ["pylibCZIrw ==4.1.1"]
+czi = ["pylibCZIrw ==4.1.3"]
 examples = [
     "fastremap ~=1.15.0",
     "pandas ~=2.2.0",
