--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -185,6 +185,9 @@ jobs:
         if: ${{ matrix.group == 1 && matrix.python-version == '3.11' }}
         run: ./typecheck.sh
 
+      - timeout-minutes: 10
+        run: ./test.sh -vv -s tests/dataset/test_dataset.py::test_chunking_wkw_wrong_chunk_shape
+
       - name: Python tests
         timeout-minutes: 30
         run: ./test.sh -vv --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration
