--- a/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
@@ -22,10 +22,10 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 20 Jan 2025 13:33:03 GMT
+        date: Thu, 30 Jan 2025 11:23:11 GMT
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"PxDd6hXgE0biL9iVj3wTJQ"}'
+        data: '{"token":"KFZHvz4A7iVBVjpP9Hieqg"}'
         compression: none
