--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
     "Programming Language :: Python :: 3.13", 
 ]
 
-requires-python = ">=3.9,<=3.13"
+requires-python = ">=3.9,<3.14"
 
 dependencies = [
     "aiohttp ~=3.10.5",
