--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
     "Programming Language :: Python :: 3.13", 
 ]
 
-requires-python = ">=3.9,<=3.13"
+requires-python = ">=3.9,<3.14"
 
 dependencies = [
     "aiohttp ~=3.10.5",
@@ -97,7 +97,7 @@ dev-dependencies = [
     "mypy ~=1.10.0",
     "pytest ~=8.3.2",
     "pytest-custom-exit-code ~=0.3.0",
-    "pytest-split ~=0.9.0",
+    "pytest-split ~=0.10.0",
     "pytest-sugar ~=1.0.0",
     "pytest-timeout ~=2.3.0",
     "pytest-timestamper ~=0.0.10",
