--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,6 +200,11 @@ jobs:
       #   timeout-minutes: 10
       #   run: ./test.sh -vv -s tests/dataset/test_dataset.py::test_chunking_wk tests/dataset/test_dataset.py::test_chunking_wkw_wrong_chunk_shape
 
+      - name: Patch fork
+        if: ${{ matrix.python-version == '3.13' }}
+        run: |
+          sed -i '67i         import traceback; traceback.print_stack()' /home/runner/.local/share/uv/python/cpython-3.13.1-linux-x86_64-gnu/lib/python3.13/multiprocessing/popen_fork.py
+
       - name: Python tests
         timeout-minutes: 30
         env:
