--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,18 +193,19 @@ jobs:
         if: ${{ matrix.group == 1 && matrix.python-version == '3.11' }}
         run: ./typecheck.sh
 
-      # - name: Setup tmate session
-      #   uses: mxschmitt/action-tmate@v3
-
-      # - name: Some tests
-      #   timeout-minutes: 10
-      #   run: ./test.sh -vv -s tests/dataset/test_dataset.py::test_chunking_wk tests/dataset/test_dataset.py::test_chunking_wkw_wrong_chunk_shape
-
+        
+        # - name: Some tests
+        #   timeout-minutes: 10
+        #   run: ./test.sh -vv -s tests/dataset/test_dataset.py::test_chunking_wk tests/dataset/test_dataset.py::test_chunking_wkw_wrong_chunk_shape
+        
       - name: Patch fork
         if: ${{ matrix.python-version == '3.13' }}
         run: |
           sed -i '67i         import traceback; traceback.print_stack()' /home/runner/.local/share/uv/python/cpython-3.13.1-linux-x86_64-gnu/lib/python3.13/multiprocessing/popen_fork.py
-
+          cat /home/runner/.local/share/uv/python/cpython-3.13.1-linux-x86_64-gnu/lib/python3.13/multiprocessing/popen_fork.py
+        
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
       - name: Python tests
         timeout-minutes: 30
         env:
