--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,9 +199,9 @@ jobs:
         #   run: ./test.sh -vv -s tests/dataset/test_dataset.py::test_chunking_wk tests/dataset/test_dataset.py::test_chunking_wkw_wrong_chunk_shape
         
       - name: Patch fork
-        if: ${{ matrix.python-version == '3.13' || matrix.python-version == '3.12' }}
+        if: ${{ matrix.python-version == '3.13' }}
         run: |
-          sed -i '66i \ \ \ \ \ \ \ \ import traceback; traceback.print_stack()' /home/runner/.local/share/uv/python/cpython-3.13.1-linux-x86_64-gnu/lib/python3.13/multiprocessing/popen_fork.py
+          sed -i '67i \ \ \ \ \ \ \ \ import traceback; traceback.print_stack()' /home/runner/.local/share/uv/python/cpython-3.13.1-linux-x86_64-gnu/lib/python3.13/multiprocessing/popen_fork.py
           cat /home/runner/.local/share/uv/python/cpython-3.13.1-linux-x86_64-gnu/lib/python3.13/multiprocessing/popen_fork.py
         
       # - name: Setup tmate session
