--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -35,6 +35,15 @@ jobs:
         CI_BRANCH=${GITHUB_HEAD_REF:-$GITHUB_REF_NAME}
         NORMALIZED_CI_BRANCH=${CI_BRANCH//[\/-]/_}
         aws s3 sync --acl public-read docs/out s3://static.webknossos.org/docs/${NORMALIZED_CI_BRANCH}
+    
+    - name: Algolia Crawler Automatic Crawl
+      uses: algolia/algoliasearch-crawler-github-actions@v1.1.13
+      with:
+        crawler-user-id: ${{ secrets.ALGOLIA_CRAWLER_USER_ID }}
+        crawler-api-key: ${{ secrets.ALGOLIA_CRAWLER_API_KEY }}
+        algolia-app-id: ${{ secrets.ALGOLIA_APP_ID }}
+        algolia-api-key: ${{ secrets.ALGOLIA_API_KEY }}
+        site-url: https://docs.webknossos.org
 
     - name: Check links (on master)
       env:
