--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
+        ref: ${{ startsWith(github.event.inputs.version, '0.') && 'support-0.x' || 'master' }}
         token: ${{ secrets.NORMANRZ_PAT }}
 
     - uses: actions/setup-python@v4
