--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "cattrs >=22.0.0",
     "certifi>=2023",
     "cluster-tools",
+    "coverage>=7.8.0",
     "httpx ~=0.27.0",
     "loxun ~=2.0.0",
     "natsort ~=8.4.0",
@@ -46,6 +47,7 @@ dependencies = [
     "numpy ~=2.0.0",
     "pims ~=0.7.0",
     "psutil ~=6.0.0",
+    "pytest-cov>=6.0.0",
     "python-dateutil ~=2.8.0",
     "python-dotenv ~=1.0.1",
     "rich ~=13.8.0",
