--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,6 +161,8 @@ jobs:
     defaults:
       run:
         working-directory: webknossos
+    env:
+      UV_CACHE_DIR: /tmp/.uv-cache
 
     steps:
       - uses: actions/checkout@v3
@@ -170,7 +172,6 @@ jobs:
         with:
           # Install a specific version of uv.
           version: "0.6.3"
-          cache-local-path: /tmp/.uv-cache
 
       - name: Install proxay
         run: npm install -g proxay
@@ -211,7 +212,7 @@ jobs:
           PYTHON_VERSION: ${{ matrix.python-version }}
           COVERAGE_FILE: "~/.local/share/coverage/${{ matrix.group }}.coverage"
           UV_CACHE_DIR: /tmp/.uv-cache
-        run: uv run bash ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration --cov=webknossos --cov-report=
+        run: ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration --cov=webknossos --cov-report=
 
       - name: Python tests
         if: ${{ matrix.python-version != '3.11' }}
@@ -219,7 +220,7 @@ jobs:
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
           UV_CACHE_DIR: /tmp/.uv-cache
-        run: uv run bash ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration
+        run: ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration
 
       - name: Minimize uv cache
         run: uv cache prune --ci
