--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -238,6 +238,8 @@ jobs:
       run:
         working-directory: webknossos
     steps:
+      - uses: actions/checkout@v3
+      
       - name: Install uv
         uses: astral-sh/setup-uv@v3
         with:
