--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -217,7 +217,7 @@ jobs:
         if: ${{ matrix.python-version == '3.11' }}
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-reports-${{ github.run_id }}
+          name: coverage-reports-${{ matrix.group }}
           path: "~/.local/share/coverage/${{ matrix.group }}.coverage"
           retention-days: 1  # Automatically deletes after 1 day
 
@@ -245,7 +245,6 @@ jobs:
       - name: Download all coverage reports
         uses: actions/download-artifact@v4
         with:
-          name: coverage-reports-${{ github.run_id }}
           path: coverage-files
       
 
