--- a/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
@@ -23,11 +23,11 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 15 Sep 2025 10:40:58 GMT
+        date: Tue, 16 Sep 2025 08:17:48 GMT
         connection: close
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"nyevQ_ehdHw0b1UZZQ-9BQ"}'
+        data: '{"token":"xBefU9m0L9ylIqfT_D-RQA"}'
         compression: none
